da fix loi khong xem duoc chi tiet san pham o menu

--- a/Views/Shared/Components/FeaturedProduct/Default.cshtml
+++ b/Views/Shared/Components/FeaturedProduct/Default.cshtml
@@ -26,7 +26,7 @@
                                     <div class="content">
                                         <div class="content-left">
                                             <h6 class="title">
-                                                <a asp-controller="Product" asp-action="ProductDetail">
+                                                <a asp-controller="Product" asp-action="ProductDetail" asp-route-slug="@item.Slug">
                                                     @item.ProductName
                                                 </a>
                                             </h6>
