update them vai cai

--- a/Views/Checkout/Index.cshtml
+++ b/Views/Checkout/Index.cshtml
@@ -84,7 +84,7 @@
 
                                 <div class="order_button pt-3">
                                     <button class="btn btn-md btn-black-default-hover" type="submit">
-                                        Thanh toán
+                                        Xác Nhận
                                     </button>
                                     <div id="paypal-button-container" style="width: 1000px" type="submit">
                                     </div>
