--- a/Views/Checkout/Index.cshtml
+++ b/Views/Checkout/Index.cshtml
@@ -80,6 +80,13 @@
                                         <span>Thanh toán khi nhận hàng (COD)</span>
                                     </label>
                                 </div>
+                                <div class="panel-default">
+                                    <label class="checkbox-default" for="currencyCard">
+                                        <input type="radio" asp-for="@Model.CheckoutVM.PaymentMethod" value="Card"
+                                               required>
+                                        <span>Thanh toán bằng thẻ ngân hàng</span>
+                                    </label>
+                                </div>
                                
 
                                 <div class="order_button pt-3">
