update biểu đồ với quản lý bình luận

--- a/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -54,7 +54,10 @@
                         </div><!--//app-card-->
                     </div><!--//col-->
                 </div><!--//row-->
-                <canvas id="Chart" width="400" height="200"></canvas>
+                <div style="display: flex; justify-content: center; align-items: center; height: 450px;">
+                    <canvas id="Chart"></canvas>
+                </div>
+
             </div>
             @* 
 				<div class="app-card app-card-chart h-100 shadow-sm">
