--- a/Areas/Admin/Views/Comment/Delete.cshtml
+++ b/Areas/Admin/Views/Comment/Delete.cshtml
@@ -1,45 +1,41 @@
 ﻿@model QuanLyGameConsole.Models.ProductComment
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa bình luận";
 }
 
-<h1>Delete</h1>
+<div class="card shadow-sm border-danger mt-4">
+    <div class="card-header bg-danger text-white">
+        <h4><i class="bi bi-trash-fill"></i> Xóa bình luận</h4>
+    </div>
+    <div class="card-body">
+        <h5 class="text-danger">Bạn có chắc chắn muốn xóa bình luận này?</h5>
+        <hr />
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ProductComment</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Contents)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Contents)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Customer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Product)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Product.ProductId)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CommentId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <dl class="row">
+            <dt class="col-sm-3 fw-bold">Nội dung bình luận</dt>
+            <dd class="col-sm-9">@Model.Contents</dd>
+
+            <dt class="col-sm-3 fw-bold">Ngày tạo</dt>
+            <dd class="col-sm-9">
+                @Model.CreatedAt.Value.ToString("dd/MM/yyyy HH:mm")
+            </dd>
+
+            <dt class="col-sm-3 fw-bold">Khách hàng</dt>
+            <dd class="col-sm-9">@Model.Customer.FullName</dd>
+
+            <dt class="col-sm-3 fw-bold">Sản phẩm</dt>
+            <dd class="col-sm-9">@Model.Product.ProductName</dd>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="CommentId" />
+            <button type="submit" class="btn btn-danger">
+                <i class="bi bi-trash"></i> Xóa
+            </button>
+            <a asp-action="Index" class="btn btn-secondary ms-2">
+                <i class="bi bi-arrow-left"></i> Quay lại
+            </a>
+        </form>
+    </div>
 </div>
