chỉnh ảnh, fix vài lỗi

--- a/Views/Shared/Components/Footer/Default.cshtml
+++ b/Views/Shared/Components/Footer/Default.cshtml
@@ -7,7 +7,7 @@
                     <div class="col-lg-3 col-sm-6 mb-6">
                         <div class="footer-logo" data-aos="fade-up" data-aos-delay="0">
                             <a href="#">
-                                <img src="@Url.Content("~/Images/" + Model.Footer.Logo)" alt="ZZZ Logo" style="max-width: 200px;">
+                                <img src="@Url.Content("~/Images/logo/" + Model.Footer.Logo)" alt="ZZZ Logo" style="max-width: 200px;">
                             </a>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                     <div class="col-auto mb-6">
                         <div class="footer-copyright">
                             <p class="copyright-text">
-                                &copy; @DateTime.Now.Year <a href="/">ZZZ</a>. Bản quyền thuộc về ZZZ
+                                &copy; @DateTime.Now.Year <a href="/">GameZ</a>. Bản quyền thuộc về GameZ
                             </p>
                         </div>
                     </div>
