sua loi kich thuoc anh

--- a/Views/Shared/Components/FeaturedProduct/Default.cshtml
+++ b/Views/Shared/Components/FeaturedProduct/Default.cshtml
@@ -14,7 +14,7 @@
                                 <div class="product-default-single-item product-color--pink swiper-slide">
                                     <div class="image-box">
                                         <a asp-controller="Product" asp-action="ProductDetail" asp-route-slug="@item.Slug" class="image-link">
-                                            <img src="~/images/@item.Image" alt="">
+                                            <img src="~/images/@item.Image" alt="" style="width: 320px; height: 320px; object-fit: contain">
                                         </a>
                                         <div class="action-link">
                                             <div class="action-link-left">
