--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -40,7 +40,7 @@
         {
             <tr>
                 <td>
-                    <img src="@product.Image" alt="@product.ProductName"
+                    <img src="~/images/@product.Image" alt="@product.Image"
                          style="width: 50px; height: 50px; object-fit: cover;" />
                 </td>
                 <td>@product.ProductName</td>
