--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -36,7 +36,7 @@
                                 <i class="fa fa-phone"></i>
                             </div>
                             <div class="contact-details-content contact-phone">
-                                <a href="">0306221377</a>
+                                <a href="">0928048049</a>
                             </div>
                         </div> <!-- End Contact Details Single Item -->
                         <!-- Start Contact Details Single Item -->
@@ -45,7 +45,7 @@
                                 <i class="fa fa-globe"></i>
                             </div>
                             <div class="contact-details-content contact-phone">
-                                <a href="mailto:demo@example.com">0306221377@caothang.edu.vn</a>
+                                <a href="mailto:demo@example.com">0928048049@niie.edu.vn</a>
                             </div>
                         </div> <!-- End Contact Details Single Item -->
                         <!-- Start Contact Details Single Item -->
@@ -54,8 +54,7 @@
                                 <i class="fa fa-map-marker"></i>
                             </div>
                             <div class="contact-details-content contact-phone">
-                                <span>65 Đ.Huỳnh Thúc Kháng, Bến Nghé, Quận 1,
-                                    Hồ Chí Minh</span>
+                                <span>458/3F Nguyễn Hữu Thọ, P. Tân Hưng, TP. HCM</span>
                             </div>
                         </div> <!-- End Contact Details Single Item -->
                     </div>
@@ -124,10 +123,7 @@
             <div class="col-12">
                 <div class="mapouter">
                     <div class="gmap_canvas">
-                        <iframe id="gmap_canvas"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62711.52922112254!2d106.62489575577935!3d10.775224986176537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f38f9ed887b%3A0x14aded5703768989!2sDistrict%201%2C%20Ho%20Chi%20Minh%20City%2C%20Vietnam!5e0!3m2!1sen!2s!4v1733640031840!5m2!1sen!2s"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.887389600073!2d106.70159989999999!3d10.743161600000011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f9fa3dc5475%3A0xb01168b1532801c8!2zNDU4LzNGIMSQLiBOZ3V54buFbiBI4buvdSBUaOG7jSwgVMOibiBIxrBuZywgUXXhuq1uIDcsIEjhu5MgQ2jDrSBNaW5oLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1755278960269!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
