--- a/Areas/Admin/Views/Product/View.cshtml
+++ b/Areas/Admin/Views/Product/View.cshtml
@@ -90,10 +90,10 @@
             @Html.DisplayFor(model => model.Slug)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Brand)
+            @Html.DisplayNameFor(model => model.BrandId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Brand.BrandId)
+            @Html.DisplayFor(model => model.BrandId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
