--- a/Areas/Admin/Views/Product/edit.cshtml
+++ b/Areas/Admin/Views/Product/edit.cshtml
@@ -34,7 +34,7 @@
                 <label class="form-label fw-bold">Ảnh hiện tại</label><br />
                 @if (!string.IsNullOrEmpty(Model.Image))
                 {
-                    <img src="~/images/products/@Model.Image alt="Ảnh sản phẩm" class="img-thumbnail mb-2" style="max-height: 200px;" />
+                    <img src="~/Images/@Model.Image alt="Ảnh sản phẩm" class="img-thumbnail mb-2" style="max-height: 200px;" />
                 }
                 else
                 {
