--- a/Areas/Admin/Views/Product/Index.cshtml
+++ b/Areas/Admin/Views/Product/Index.cshtml
@@ -22,13 +22,13 @@
 
 <a href="@Url.Action("Create", "Product")" class="btn btn-primary">Thêm sản phẩm mới</a>
 
-
 <table class="table table-bordered mt-3">
     <thead>
         <tr>
             <th>Hình ảnh</th>
             <th>Tên sản phẩm</th>
             <th>Danh mục</th>
+            <th>Thương hiệu</th>
             <th>Giá</th>
             <th>Số lượng</th>
             <th>Trạng thái</th>
@@ -40,11 +40,13 @@
         {
             <tr>
                 <td>
-                    <img src="~/images/@product.Image" alt="@product.Image"
-                         style="width: 50px; height: 50px; object-fit: cover;" />
+                    <img src="@Url.Content("~/Images/" + product.Image)?v=@DateTime.Now.Ticks"
+                         alt="@product.ProductName"
+                         style="width:50px; height:50px; object-fit:cover;" />
                 </td>
                 <td>@product.ProductName</td>
                 <td>@product.Category?.CategoryName</td>
+                <td>@product.BrandId</td>
                 <td>@product.Price</td>
                 <td>@product.Quantity</td>
                 <td>
